# task_manager

./: README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/notes_app/: apps.py  serializers.py  tests.py  urls.py
backend/notes_app/migrations/: 0001_initial.py
backend/todos_app/: apps.py  models.py  tests.py  urls.py  views.py
backend/todos_app/migrations/: 0001_initial.py
